--- a/public/about-insect.html
+++ b/public/about-insect.html
@@ -19,7 +19,6 @@
     <meta name="twitter:image" content="https://anse-sample1.pages.dev/favicon.svg">
 
     <!-- Styles from korea-sentiment.html -->
-    <link rel="stylesheet" href="style.css"/>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
 
     <!-- Tailwind CSS and Fonts from korea-sentiment.html -->
@@ -83,7 +82,8 @@
     }
     </script>
 </head>
-<body>
+<body class="min-h-screen bg-background-light dark:bg-background-dark text-slate-900 dark:text-slate-200">
+    <div id="root">
 <!-- Header from korea-sentiment.html, adjusted for about-insect.html -->
 <header class="sticky top-0 z-50 w-full border-b border-solid border-[#e7ecf4] dark:border-[#1e293b] bg-white/80 dark:bg-background-dark/80 backdrop-blur-md">
 <div class="mx-auto flex max-w-[1200px] items-center justify-between px-6 py-3">
@@ -104,6 +104,9 @@
 </div>
 <div class="flex items-center gap-4">
 
+<button id="theme-switcher" class="flex h-10 w-10 items-center justify-center rounded-lg bg-[#f0f3f9] dark:bg-slate-800 text-[#0d131c] dark:text-white">
+<span class="material-symbols-outlined">light_mode</span>
+</button>
 <button class="flex h-10 w-10 items-center justify-center rounded-lg bg-[#f0f3f9] dark:bg-slate-800 text-[#0d131c] dark:text-white">
 <span class="material-symbols-outlined">notifications</span>
 </button>
@@ -116,32 +119,32 @@
             <div class="lg:col-span-12">
                 <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-8 shadow-sm">
                     <article>
-                        <h2>곤충상이란?</h2>
+                        <h2 class="text-lg font-bold">곤충상이란?</h2>
                         <p>곤충상 테스트는 AI 기술을 활용하여 당신의 얼굴에서 특정 곤충과 유사한 특징을 찾아내는 흥미로운 테스트입니다. 이는 과학적 근거보다는 재미와 심리적인 측면에 초점을 맞춘 콘텐츠입니다.</p>
                         
 
-                        <h3>어떻게 작동하나요?</h3>
+                        <h3 class="text-lg font-bold">어떻게 작동하나요?</h3>
                         <p>사용자가 업로드한 얼굴 사진을 AI가 분석하여 미리 정의된 곤충 유형(예: 개미상, 벌상, 나비상 등) 중 가장 적합한 유형을 매칭합니다. AI는 얼굴형, 눈매, 코, 입술 등 다양한 특징을 종합적으로 고려하여 판단합니다.</p>
 
-                        <h3>각 곤충상의 특징은 무엇인가요?</h3>
+                        <h3 class="text-lg font-bold">각 곤충상의 특징은 무엇인가요?</h3>
                         <ul>
                             <li>
-                                <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%2364748B'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23FFFFFF'%3E🐜%3C/text%3E%3C/svg%3E" alt="개미 이미지" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;">개미상:</strong> 부지런하고 협동심이 강한 인상을 줍니다. 목표 지향적이고 현실적인 성향을 가집.
+                                <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%2364748B'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23FFFFFF'%3E🐜%3C/text%3E%3C/svg%3E" alt="개미 이미지" class="w-5 h-5 align-middle mr-1">개미상:</strong> 부지런하고 협동심이 강한 인상을 줍니다. 목표 지향적이고 현실적인 성향을 가집.
                             </li>
                             <li>
-                                <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%2364748B'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23FFFFFF'%3E🐝%3C/text%3E%3C/svg%3E" alt="벌 이미지" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;">벌상:</strong> 활발하고 에너지가 넘치며, 리더십 있는 모습을 보입니다. 사회성이 뛰어나고 책임감이 강합니다.
+                                <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%2364748B'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23FFFFFF'%3E🐝%3C/text%3E%3C/svg%3E" alt="벌 이미지" class="w-5 h-5 align-middle mr-1">벌상:</strong> 활발하고 에너지가 넘치며, 리더십 있는 모습을 보입니다. 사회성이 뛰어나고 책임감이 강합니다.
                             </li>
                             <li>
-                                <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%2364748B'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23FFFFFF'%3E🦋%3C/text%3E%3C/svg%3E" alt="나비 이미지" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;">나비상:</strong> 아름답고 섬세하며, 자유로운 영혼을 가진 인상을 줍니다. 예술적 감각이 뛰어나고 변화를 즐깁니다.
+                                <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%2364748B'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23FFFFFF'%3E🦋%3C/text%3E%3C/svg%3E" alt="나비 이미지" class="w-5 h-5 align-middle mr-1">나비상:</strong> 아름답고 섬세하며, 자유로운 영혼을 가진 인상을 줍니다. 예술적 감각이 뛰어나고 변화를 즐깁니다.
                             </li>
                             <li>
-                                <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%2364748B'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23FFFFFF'%3E🦗%3C/text%3E%3C/svg%3E" alt="사마귀 이미지" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;">사마귀상:</strong> 날카롭고 카리스마 있는 인상을 줍니다. 집중력이 좋고 목표를 향해 끈기 있게 나아가는 성향이 있습니다.
+                                <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%2364748B'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23FFFFFF'%3E🦗%3C/text%3E%3C/svg%3E" alt="사마귀 이미지" class="w-5 h-5 align-middle mr-1">사마귀상:</strong> 날카롭고 카리스마 있는 인상을 줍니다. 집중력이 좋고 목표를 향해 끈기 있게 나아가는 성향이 있습니다.
                             </li>
                             <li>
-                                <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%2364748B'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23FFFFFF'%3E🐞%3C/text%3E%3C/svg%3E" alt="무당벌레 이미지" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;">무당벌레상:</strong> 귀엽고 친근하며, 긍정적인 에너지를 발산합니다. 주변 사람들에게 행복을 주는 유쾌한 성격입니다.
+                                <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%2364748B'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23FFFFFF'%3E🐞%3C/text%3E%3C/svg%3E" alt="무당벌레 이미지" class="w-5 h-5 align-middle mr-1">무당벌레상:</strong> 귀엽고 친근하며, 긍정적인 에너지를 발산합니다. 주변 사람들에게 행복을 주는 유쾌한 성격입니다.
                             </li>
                             <li>
-                                <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%2364748B'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23FFFFFF'%3E🪲%3C/text%3E%3C/svg%3E" alt="장수풍뎅이 이미지" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;">장수풍뎅이상:</strong> 튼튼하고 묵직한 인상을 주며, 강인함과 안정감을 가집니다. 신뢰할 수 있고 든든한 타입입니다.
+                                <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%2364748B'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23FFFFFF'%3E🪲%3C/text%3E%3C/svg%3E" alt="장수풍뎅이 이미지" class="w-5 h-5 align-middle mr-1">장수풍뎅이상:</strong> 튼튼하고 묵직한 인상을 주며, 강인함과 안정감을 가집니다. 신뢰할 수 있고 든든한 타입입니다.
                             </li>
                         </ul>
                         <p>결과는 가볍게 즐겨주세요. 당신의 숨겨진 곤충 매력을 발견하는 시간이 되기를 바랍니다!</p>
@@ -152,12 +155,12 @@
             <div class="lg:col-span-12 mt-8">
                 <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-8 shadow-sm">
                     <div class="contact-section">
-                        <h2>제휴 문의</h2>
+                        <h2 class="text-lg font-bold">제휴 문의</h2>
                         <form action="https://formspree.io/f/mlggrwrk" method="POST">
                             <input type="text" name="name" placeholder="이름" required>
                             <input type="email" name="email" placeholder="이메일" required>
                             <textarea name="message" placeholder="내용" required></textarea>
-                            <button type="submit">보내기</button>
+                            <button type="submit" class="rounded-lg bg-primary px-4 py-2 text-sm font-bold text-white hover:opacity-80 transition-colors">보내기</button>
                         </form>
                     </div>
                 </div>
@@ -187,6 +190,43 @@
 </div>
 </footer>
 
+    <script type="text/javascript">
+        // Theme switcher logic
+        const themeSwitcher = document.getElementById('theme-switcher');
+        const updateThemeIcon = (isDarkMode) => {
+            const icon = document.querySelector('#theme-switcher .material-symbols-outlined');
+            if (icon) {
+                icon.textContent = isDarkMode ? 'dark_mode' : 'light_mode';
+            }
+        };
+
+        const applySavedTheme = () => {
+            const savedTheme = localStorage.getItem('theme');
+            const isDarkMode = savedTheme === 'dark';
+            if (isDarkMode) {
+                document.documentElement.classList.add('dark');
+                updateThemeIcon(true);
+            } else {
+                document.documentElement.classList.remove('dark');
+                updateThemeIcon(false);
+            }
+        };
+
+        if (themeSwitcher) {
+            themeSwitcher.addEventListener('click', () => {
+                const isDarkMode = document.documentElement.classList.toggle('dark');
+                if (isDarkMode) {
+                    localStorage.setItem('theme', 'dark');
+                } else {
+                    localStorage.removeItem('theme');
+                }
+                updateThemeIcon(isDarkMode);
+            });
+        }
+        
+        // Initial theme application on DOMContentLoaded
+        document.addEventListener('DOMContentLoaded', applySavedTheme);
+    </script>
     <script>
         // Disqus configuration (remains unchanged)
         var disqus_config = function () {
@@ -201,5 +241,6 @@
         })();
     </script>
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</div>
 </body>
 </html>
