--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,6 @@
     <meta name="twitter:description" content="오늘 저녁 메뉴가 고민될 때, 버튼 하나로 간편하게 한식, 중식, 일식 등 다양한 저녁 메뉴를 추천받으세요.">
     <meta name="twitter:image" content="https://anse-sample1.pages.dev/favicon.svg">
 
-    <link rel="stylesheet" href="style.css"/>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
 
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
@@ -86,7 +85,8 @@
          crossorigin="anonymous"></script>
         <meta name="google-adsense-account" content="ca-pub-9750321636945438">
 </head>
-<body>
+<body class="min-h-screen bg-background-light dark:bg-background-dark text-slate-900 dark:text-slate-200">
+    <div id="root">
 <!-- Top Navigation Bar -->
 <header class="sticky top-0 z-50 w-full border-b border-solid border-[#e7ecf4] dark:border-[#1e293b] bg-white/80 dark:bg-background-dark/80 backdrop-blur-md">
 <div class="mx-auto flex max-w-[1200px] items-center justify-between px-6 py-3">
@@ -106,11 +106,13 @@
 </nav>
 </div>
 <div class="flex items-center gap-4">
-
+<button id="theme-switcher" class="flex h-10 w-10 items-center justify-center rounded-lg bg-[#f0f3f9] dark:bg-slate-800 text-[#0d131c] dark:text-white">
+<span class="material-symbols-outlined">light_mode</span>
+</button>
 <button class="flex h-10 w-10 items-center justify-center rounded-lg bg-[#f0f3f9] dark:bg-slate-800 text-[#0d131c] dark:text-white">
 <span class="material-symbols-outlined">notifications</span>
 </button>
-<div class="h-10 w-10 rounded-full bg-cover bg-center ring-2 ring-primary/20" data-alt="User profile avatar" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuBneBh9BK99BKx2b26Ln0wWAXSWA-NkKD-lrrv98lVK_rJdPXTgQuGmdvqczD3UIKISPcMnzpf-BQOdedWBnyulZOQWc1ciJwX7DT6PMhaFrVawJq4F6y18XmDN29W32bH_6CzaUWabwqtdTvTlUIGfSvw74jtRHl327xyGMcu_5I55ABKEDpKDaOoVeIFo8NUFPEGK3dONKg3bls3I7AJT26lh-N-OCbGYRo4N6cdwNSvECRXQfW82pZjHea9vnYNYvU8yp9ZTwnIf')"></div>
+<div class="h-10 w-10 rounded-full bg-cover bg-center ring-2 ring-primary/20" data-alt="User profile avatar" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuBneBh9BK99BKx2b26Ln0wWAXSWA-NkKD-lrrv98lVK_rJdPXTgQuGmdvqczD3UIKISPcMnzpf-BQOdedWBnyulZOQWc1ciJwX7DT6PMhaFrVawJq4F6y18XmDN29W32bH_6CzaUWabwqtdTvTlUIGfSvw74jtRHl327xyGMcu_5I55ABKEDpKDaOoVeIFo8NUFPEGK3dONKg3bls3I7AJT26lh-N-OCbGYRo4N6cdwNSvU8yp9ZTwnIf')"></div>
 </div>
 </div>
 </header>
@@ -129,7 +131,7 @@
                             <img id="menu-image" src="" alt="추천 메뉴 이미지" style="display: none; width:30em; max-width: 100%; height: auto; margin-bottom: 15px; border-radius: 8px;">
                             <span id="menu-recommendation">AI가 잠시 후 저녁 메뉴를 추천합니다...</span>
                         </div>
-                        <button id="generate">추천 받기</button>
+                        <button id="generate" class="rounded-lg bg-primary px-4 py-2 text-sm font-bold text-white hover:opacity-80 transition-colors">추천 받기</button>
                     </article>
                 </div>
             </div>
@@ -137,7 +139,7 @@
             <div class="lg:col-span-12 mt-8">
                 <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-8 shadow-sm">
                     <section>
-                        <h2>AI 저녁 메뉴 추천기란?</h2>
+                        <h2 class="text-lg font-bold">AI 저녁 메뉴 추천기란?</h2>
                         <p>본 웹사이트는 결정 장애를 겪는 분들을 위해 버튼 클릭 한 번으로 저녁 메뉴를 추천해주는 AI 기반 도구입니다. 추천 메뉴는 한식, 중식, 일식, 양식 등 다양한 카테고리를 포함합니다.</p>
                     </section>
                 </div>
@@ -146,10 +148,10 @@
             <div class="lg:col-span-12 mt-8">
                 <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-8 shadow-sm">
                     <section>
-                        <h2>자주 묻는 질문 (Q&A)</h2>
-                        <h3>Q. 추천은 어떻게 이루어지나요?</h3>
+                        <h2 class="text-lg font-bold">자주 묻는 질문 (Q&A)</h2>
+                        <h3 class="text-base font-bold">Q. 추천은 어떻게 이루어지나요?</h3>
                         <p>A. AI가 사전에 학습한 방대한 메뉴 데이터베이스에서 무작위로 1개의 메뉴를 선정하여 추천합니다.</p>
-                        <h3>Q. 메뉴를 직접 추가할 수 있나요?</h3>
+                        <h3 class="text-base font-bold">Q. 메뉴를 직접 추가할 수 있나요?</h3>
                         <p>A. 현재는 메뉴 추가 기능이 없으나, 제휴 문의를 통해 메뉴 추가를 제안하실 수 있습니다.</p>
                     </section>
                 </div>
@@ -158,7 +160,7 @@
             <div class="lg:col-span-12 mt-8">
                 <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-8 shadow-sm">
                     <section>
-                        <h2>데이터 출처 및 기준</h2>
+                        <h2 class="text-lg font-bold">데이터 출처 및 기준</h2>
                         <p>본 추천기의 메뉴 리스트는 대한민국 인기 외식 메뉴 및 배달 음식 데이터를 기반으로 작성되었습니다. (기준일: 2026년 1월)</p>
                         <table>
                             <caption>카테고리별 메뉴 예시</caption>
@@ -192,12 +194,12 @@
             <div class="lg:col-span-12 mt-8">
                 <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-8 shadow-sm">
                     <div class="contact-section">
-                        <h2>저녁 메뉴 추천 제휴 문의</h2>
+                        <h2 class="text-lg font-bold">저녁 메뉴 추천 제휴 문의</h2>
                         <form action="https://formspree.io/f/mlggrwrk" method="POST">
                             <input type="text" name="name" placeholder="이름" required>
                             <input type="email" name="email" placeholder="이메일" required>
                             <textarea name="message" placeholder="내용" required></textarea>
-                            <button type="submit">보내기</button>
+                            <button type="submit" class="rounded-lg bg-primary px-4 py-2 text-sm font-bold text-white hover:opacity-80 transition-colors">보내기</button>
                         </form>
                     </div>
                 </div>
@@ -297,33 +299,42 @@ menuImage.addEventListener('error', () => {
 });
 
 // --- Theme Switcher Logic ---
+const updateThemeIcon = (isDarkMode) => {
+    const icon = document.querySelector('#theme-switcher .material-symbols-outlined');
+    if (icon) {
+        icon.textContent = isDarkMode ? 'dark_mode' : 'light_mode';
+    }
+};
+
+const applySavedTheme = () => {
+    const savedTheme = localStorage.getItem('theme');
+    const isDarkMode = savedTheme === 'dark';
+    if (isDarkMode) {
+        document.documentElement.classList.add('dark');
+        updateThemeIcon(true);
+    } else {
+        document.documentElement.classList.remove('dark');
+        updateThemeIcon(false);
+    }
+};
+
 themeSwitcher.addEventListener('click', () => {
-    console.log('Toggle Theme button clicked!');
-    body.classList.toggle('dark-mode');
-    if (body.classList.contains('dark-mode')) {
-        localStorage.setItem('theme', 'dark-mode');
+    const isDarkMode = document.documentElement.classList.toggle('dark');
+    if (isDarkMode) {
+        localStorage.setItem('theme', 'dark');
     } else {
         localStorage.removeItem('theme');
     }
+    updateThemeIcon(isDarkMode);
 });
-
-
-
-
-
 
 // 페이지 로드 시 저장된 테마를 확인하고 적용합니다.
 document.addEventListener('DOMContentLoaded', () => {
-    const savedTheme = localStorage.getItem('theme');
-    if (savedTheme) {
-        body.classList.add(savedTheme);
-    }
+    applySavedTheme();
     // 페이지가 처음 로드될 때 메뉴를 추천합니다.
     if (generateBtn) { // Only call if on the main menu page
         recommendMenu();
     }
-
-
 });
 
 if (generateBtn) {
@@ -349,5 +360,6 @@ if (generateBtn) {
     </script>
    
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</div>
 </body>
 </html>
