--- a/public/privacy.html
+++ b/public/privacy.html
@@ -18,18 +18,43 @@
     <meta property="twitter:description" content="본 웹사이트의 개인정보처리방침에 대해 안내합니다. 사용자의 개인정보 보호를 최우선으로 합니다.">
     <meta property="twitter:image" content="https://anse-sample1.pages.dev/favicon.svg">
 
-    <link rel="stylesheet" href="style.css">
-    <noscript><link rel="stylesheet" href="style.css"></noscript>
-    <link rel="icon" type="image/x-icon" href="fa.ico">
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-C8QR98TVTB"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
 
-  gtag('config', 'G-C8QR98TVTB');
-</script>
+    <!-- Tailwind CSS and Fonts from korea-sentiment.html -->
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&amp;display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
+    <script id="tailwind-config">
+            tailwind.config = {
+                darkMode: "class",
+                theme: {
+                    extend: {
+                        colors: {
+                            "primary": "#3d84f5",
+                            "background-light": "#f5f7f8",
+                            "background-dark": "#101722",
+                        },
+                        fontFamily: {
+                            "display": ["Inter", "sans-serif"]
+                        },
+                        borderRadius: {"DEFAULT": "0.25rem", "lg": "0.5rem", "xl": "0.75rem", "full": "9999px"},
+                    },
+                },
+            }
+        </script>
+    <style>
+            body { font-family: 'Inter', sans-serif; }
+            .material-symbols-outlined { font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'OPSZ' 24; }
+        </style>
+
+    <!-- Google Analytics and Clarity scripts -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C8QR98TVTB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-C8QR98TVTB');
+    </script>
     <script type="text/javascript">
         (function(c,l,a,r,i,t,y){
             c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
@@ -41,75 +66,134 @@
      crossorigin="anonymous"></script>
     <meta name="google-adsense-account" content="ca-pub-9750321636945438">
 </head>
-<body>
-    <header class="container">
-        <h1><a href="/">오늘 저녁 뭐 먹지?</a></h1>
-        <nav style="display:flex; justify-content:center;">
-            <a href="/insect.html">곤충상 테스트</a>
-            <a href="/about-insect.html">곤충상이란?</a>
-            <a href="/sentiment.html">미국 금융 시장 심리</a>
-            <a href="/korea-sentiment.html">한국 금융시장 심리</a>
-        </nav>
-    </header>
-    <p style="font-size:5px"> </p>
-
-    <main class="container">
-        <article>
-            <h2>개인정보처리방침</h2>
+<body class="min-h-screen bg-background-light dark:bg-background-dark text-slate-900 dark:text-slate-200">
+    <div id="root">
+<!-- Top Navigation Bar -->
+<header class="sticky top-0 z-50 w-full border-b border-solid border-[#e7ecf4] dark:border-[#1e293b] bg-white/80 dark:bg-background-dark/80 backdrop-blur-md">
+<div class="mx-auto flex max-w-[1200px] items-center justify-between px-6 py-3">
+<div class="flex items-center gap-8">
+<div class="flex items-center gap-3">
+<div class="flex h-8 w-8 items-center justify-center rounded-lg bg-primary">
+<span class="material-symbols-outlined text-[20px] text-white">policy</span>
+</div>
+<h2 class="text-lg font-bold tracking-tight dark:text-white">개인정보처리방침</h2>
+</div>
+<nav class="hidden md:flex items-center gap-6">
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/index.html">오늘 저녁 뭐 먹지?</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/insect.html">곤충상 테스트</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/about-insect.html">곤충상이란?</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html">미국 금융 시장 심리</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/korea-sentiment.html">한국 금융시장 심리</a>
+<a class="text-sm font-semibold text-primary" href="/privacy.html">개인정보처리방침</a>
+</nav>
+</div>
+<div class="flex items-center gap-4">
+<button id="theme-switcher" class="flex h-10 w-10 items-center justify-center rounded-lg bg-[#f0f3f9] dark:bg-slate-800 text-[#0d131c] dark:text-white">
+<span class="material-symbols-outlined">light_mode</span>
+</button>
+<button class="flex h-10 w-10 items-center justify-center rounded-lg bg-[#f0f3f9] dark:bg-slate-800 text-[#0d131c] dark:text-white">
+<span class="material-symbols-outlined">notifications</span>
+</button>
+<div class="h-10 w-10 rounded-full bg-cover bg-center ring-2 ring-primary/20" data-alt="User profile avatar" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuBneBh9BK99BKx2b26Ln0wWAXSWA-NkKD-lrrv98lVK_rJdPXTgQuGmdvqczD3UIKISPcMnzpf-BQOdedWBnyulZOQWc1ciJwX7DT6PMhaFrVawJq4F6y18XmDN29W32bH_6CzaUWabwqtdTvTlUIGfSvw74jtRHl327xyGMcu_5I55ABKEDpKDaOoVeIFo8NUFPEGK3dONKg3bls3I7AJT26lh-N-OCbGYRo4N6cdwNSvU8yp9ZTwnIf')"></div>
+</div>
+</div>
+</header>
+    <main class="mx-auto max-w-[1200px] px-6 py-8">
+        <div class="grid grid-cols-1 gap-8 lg:grid-cols-12">
+            <div class="lg:col-span-12">
+                <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-8 shadow-sm">
+                    <article>
+                        <h1 class="text-3xl font-black tracking-tight dark:text-white">개인정보처리방침</h1>
             <p>본 웹사이트 ("오늘 저녁 뭐 먹지?")는 사용자 여러분의 개인정보를 중요하게 생각하며, 「개인정보 보호법」 및 관련 법령을 준수하고 있습니다.</p>
 
-            <h3>1. 수집하는 개인정보 항목 및 수집 방법</h3>
+            <h2 class="text-lg font-bold">1. 수집하는 개인정보 항목 및 수집 방법</h2>
             <p>본 웹사이트는 원칙적으로 사용자의 개인정보를 수집하지 않습니다. 다만, '제휴 문의' 양식을 통해 이름, 이메일 주소, 문의 내용을 자발적으로 제공하는 경우에 한해 해당 정보가 수집됩니다. 이 정보는 Formspree 서비스를 통해 전달됩니다.</p>
             <ul>
                 <li><strong>수집 항목:</strong> 이름, 이메일 주소, 문의 내용 (사용자가 직접 입력)</li>
                 <li><strong>수집 목적:</strong> 문의 응대 및 서비스 개선</li>
             </ul>
 
-            <h3>2. 개인정보의 이용 및 보유 기간</h3>
+            <h2 class="text-lg font-bold">2. 개인정보의 이용 및 보유 기간</h2>
             <p>수집된 개인정보는 문의 응대를 위한 목적으로만 이용되며, 문의 처리가 완료되면 지체 없이 파기됩니다. 별도로 법령에 의해 보존할 필요가 있는 경우가 아니라면 장기간 보유하지 않습니다.</p>
 
-            <h3>3. 개인정보의 제3자 제공</h3>
+            <h2 class="text-lg font-bold">3. 개인정보의 제3자 제공</h2>
             <p>본 웹사이트는 사용자의 개인정보를 원칙적으로 외부에 제공하지 않습니다. 다만, 사용자의 동의가 있거나 법률의 특별한 규정에 따라 개인정보를 제공하는 경우는 예외로 합니다.</p>
 
-            <h3>4. 개인정보 처리 위탁</h3>
+            <h2 class="text-lg font-bold">4. 개인정보 처리 위탁</h2>
             <p>본 웹사이트는 '제휴 문의' 양식의 처리를 위해 Formspree (https://formspree.io/) 서비스를 이용합니다. Formspree는 사용자가 제출한 문의 내용을 처리하고 지정된 이메일로 전달하는 역할을 합니다. Formspree의 개인정보처리방침은 해당 서비스 웹사이트에서 확인하실 수 있습니다.</p>
 
-            <h3>5. 사용자의 권리</h3>
+            <h2 class="text-lg font-bold">5. 사용자의 권리</h2>
             <p>사용자는 언제든지 자신의 개인정보를 조회하거나 수정, 삭제를 요청할 수 있으며, 개인정보 처리 정지를 요청할 수 있습니다. 이에 대한 요청은 본 웹사이트의 '제휴 문의' 양식 또는 하단의 이메일 주소를 통해 문의하실 수 있습니다.</p>
 
-            <h3>6. 쿠키(Cookie) 운영</h3>
+            <h2 class="text-lg font-bold">6. 쿠키(Cookie) 운영</h2>
             <p>본 웹사이트는 사용자 경험 개선을 위해 쿠키를 사용할 수 있습니다. 쿠키는 웹사이트를 운영하는 데 이용되는 서버가 사용자의 컴퓨터 브라우저에게 보내는 소량의 정보이며 사용자의 PC 컴퓨터 내 하드디스크에 저장됩니다. 사용자는 웹 브라우저 설정을 통해 쿠키 저장을 거부할 수 있습니다. 단, 쿠키 저장을 거부할 경우 일부 서비스 이용에 어려움이 있을 수 있습니다.</p>
             <ul>
                 <li><strong>사용 목적:</strong> 테마 설정 유지 (다크 모드/라이트 모드)</li>
                 <li><strong>거부 방법:</strong> 웹 브라우저의 옵션을 선택함으로써 모든 쿠키를 허용하거나, 쿠키를 저장할 때마다 확인을 거치거나, 모든 쿠키의 저장을 거부할 수 있습니다.</li>
             </ul>
 
-            <h3>7. 개인정보 보호 책임자 및 담당자</h3>
+            <h2 class="text-lg font-bold">7. 개인정보 보호 책임자 및 담당자</h2>
             <p>본 웹사이트의 개인정보 보호 책임자는 별도로 지정되어 있지 않으며, 문의사항은 '제휴 문의' 양식을 통해 주시면 신속하게 답변 드리겠습니다.</p>
             
-            <h3>8. 정책 변경에 따른 고지의 의무</h3>
+            <h2 class="text-lg font-bold">8. 정책 변경에 따른 고지의 의무</h2>
             <p>이 개인정보처리방침은 2026년 1월 17일부터 적용됩니다. 법령 및 정책 또는 보안기술의 변경에 따라 내용의 추가, 삭제 및 수정이 있을 시에는 변경되는 개인정보처리방침을 시행하기 최소 7일 전부터 웹사이트를 통해 고지할 예정입니다.</p>
         </article>
     </main>
 
-    <div class="contact-section">
-        <h2>제휴 문의</h2>
-        <form action="https://formspree.io/f/mlggrwrk" method="POST">
-            <input type="text" name="name" placeholder="이름" required>
-            <input type="email" name="email" placeholder="이메일" required>
-            <textarea name="message" placeholder="내용" required></textarea>
-            <button type="submit">보내기</button>
-        </form>
-    </div>
+    <footer class="mt-12 border-t border-[#e7ecf4] dark:border-[#1e293b] pt-8 pb-12">
+<div class="flex flex-wrap items-center justify-between gap-6 text-[#49699c] dark:text-slate-500">
+<div class="flex flex-col gap-2">
+<p class="text-sm font-medium">본 웹사이트의 개인정보처리방침에 대해 안내합니다. 사용자의 개인정보 보호를 최우선으로 합니다.</p>
+<p class="max-w-md text-xs leading-relaxed">본 개인정보처리방침은 2026년 1월 17일부터 적용됩니다.</p>
+</div>
+<div class="flex gap-4">
+<a href="/privacy.html" class="flex items-center gap-2 rounded-lg bg-[#e7ecf4] dark:bg-slate-800 px-4 py-2 text-sm font-bold text-[#0d131c] dark:text-white hover:opacity-80">
+<span class="material-symbols-outlined text-[18px]">policy</span>
+                        개인정보처리방침
+                    </a>
+</div>
+</div>
+</footer>
 
-    <div id="disqus_thread"></div>
 
-    <footer class="container">
-        <p>Last updated: 2026년 1월 17일</p>
-        <p><a href="/privacy.html">개인정보처리방침</a></p>
-    </footer>
+    <script type="text/javascript">
+        // Theme switcher logic
+        const themeSwitcher = document.getElementById('theme-switcher');
+        const updateThemeIcon = (isDarkMode) => {
+            const icon = document.querySelector('#theme-switcher .material-symbols-outlined');
+            if (icon) {
+                icon.textContent = isDarkMode ? 'dark_mode' : 'light_mode';
+            }
+        };
 
-    <script src="main.js"></script>
+        const applySavedTheme = () => {
+            const savedTheme = localStorage.getItem('theme');
+            const isDarkMode = savedTheme === 'dark';
+            if (isDarkMode) {
+                document.documentElement.classList.add('dark');
+                updateThemeIcon(true);
+            } else {
+                document.documentElement.classList.remove('dark');
+                updateThemeIcon(false);
+            }
+        };
+
+        if (themeSwitcher) {
+            themeSwitcher.addEventListener('click', () => {
+                const isDarkMode = document.documentElement.classList.toggle('dark');
+                if (isDarkMode) {
+                    localStorage.setItem('theme', 'dark');
+                } else {
+                    localStorage.removeItem('theme');
+                }
+                updateThemeIcon(isDarkMode);
+            });
+        }
+        
+        // Initial theme application on DOMContentLoaded
+        document.addEventListener('DOMContentLoaded', applySavedTheme);
+    </script>
+
     <script>
         // Disqus configuration (remains unchanged)
         var disqus_config = function () {
